<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="cointrade.uysal.development.cointradesimulation.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <Button
            android:id="@+id/mywallet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:text="@string/my_wallet" />

        <Button
            android:id="@+id/market"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:text="@string/coin_market" />

        <Button
            android:id="@+id/summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="2"
            android:background="@drawable/round_button"
            android:text="@string/summary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/refresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            android:text="@string/refresh" />


        <TextView
            android:id="@+id/balance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingLeft="10dp"
            android:text="@string/balance"
            android:gravity="center"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout3">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_group"
            android:layout_margin="5dp"
            android:background="@drawable/search"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:hint="Arama"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:divider="#FFFFFF"
        android:dividerHeight="7sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/adView" />


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-6328620287804966/2205467888">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
